feat: add hamper builder component with product selection, gift wrapping, and customization options
- Implemented hamper builder UI with product selection grid and hamper visualization.
- Added functionality for selecting hamper size and gift wrapping options.
- Included customization fields for hamper name, recipient name, and gift message.
- Integrated services for managing hamper state, including adding/removing items and calculating total price.
- Styled component with SCSS for responsive design and user-friendly interface.

--- a/angular.json
+++ b/angular.json
@@ -49,10 +49,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
             "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "outputMode": "static",
+            "ssr": false
           },
           "configurations": {
             "production": {
@@ -64,8 +62,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "10kB",
+                  "maximumError": "35kB"
                 }
               ],
               "outputHashing": "all"
