--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/compiler-cli": "^21.1.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
+    "angular-cli-ghpages": "^3.0.2",
     "typescript": "~5.9.2"
   }
 }
