feat: Add deployment configuration for GitHub Pages with baseHref and build target

--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,13 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/Gifting/",
+            "buildTarget": "gifting-ecommerce:build:production"
+          }
         }
       }
     }
