feat: Update baseHref in deployment configuration to reflect new project name

--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/Gifting/",
+            "baseHref": "/Giftory/",
             "buildTarget": "gifting-ecommerce:build:production"
           }
         }
