--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/404.html"],
             "styles": ["src/styles.scss"],
             "server": "src/main.server.ts",
             "outputMode": "static",
